# rhdemo

./: .gitignore  README.org  Vagrantfile  db.sql  demo-k8s.yml
.github/workflows/: aws.yml
app/: Dockerfile  flake.nix  pyproject.toml
app/rhdemo-py/: devshell.toml  flake.nix  pyproject.toml
app/rhdemo-py/rhdemo_py/: app.py
app/rhdemo_py/: app.py
app/src/: app.py
app/tests/: test_rhdemo_py.py
phase1/: Vagrantfile
phase1/provisioning/: all.yml  app-container.yml  app.yml  containers.yml  db.yml  deploy-app.yml  jumphost.yml  lb.yml  requirements.yml
phase1/provisioning/roles/app/defaults/: main.yml
phase1/provisioning/roles/app/tasks/: main.yml
phase1/provisioning/roles/base_system/tasks/: main.yml  setup-rhel.yml
phase1/provisioning/roles/containers/defaults/: main.yml
phase1/provisioning/roles/containers/tasks/: main.yml
phase1/provisioning/roles/containers/templates/: docker-compose.yml.j2
phase1/provisioning/roles/db/defaults/: main.yml
phase1/provisioning/roles/db/tasks/: cluster-post.yml  cluster-setup.yml  db-rhel.yml  db-storage.yml  main.yml
phase1/provisioning/roles/deploy-app/tasks/: main.yml
phase1/provisioning/roles/jumphost/tasks/: jumphost-rhel.yml
phase1/provisioning/roles/lb/tasks/: main.yml
phase1/provisioning/secret/: db-1--user_pass--hacluster.txt
phase2/: Vagrantfile
phase2/provisioning/: db.yml
phase2/provisioning/roles/db/defaults/: main.yml
provisioning/roles/app/tasks/: app-rhel.yml
provisioning/roles/base_system/handlers/: main.yml
provisioning/roles/base_system/tasks/: setup-rhel.yml
(+14 files in other folders)
