[tool.poetry]
name = "rhdemo-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
include = ["templates/*"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
mariadb = "^1.0.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "rhdemo_py.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
