[tool.poetry]
name = "rhdemo-py"
version = "0.1.0"
description = ""
authors = ["david grimsley <grimsleydl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
# mariadb = "^1.0.10"
mariadb = "^1.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
